0.1a1
-----

- Initial release: fork of repoze.catalog and zope.index, combined.
